k8s/local/ingress/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: petclinic-msa-ingress
  namespace: default
spec:
  rules:
    - host: petclinic.msa.local
      http:
        paths:
          - path: /api/vet(/|$)(.*)
            backend:
              serviceName: vets
              servicePort: 8080
          - path: /api/customer(/|$)(.*)
            backend:
              serviceName: customers
              servicePort: 8080
